RSBase/.gradle/gradle.log
****************************
 Powered By MCP:             
 http://modcoderpack.com/    
 Searge, ProfMobius, Fesh0r, 
 R4wk, ZeuX, IngisKahn, bspkrs
 MCP Data version : unknown
****************************
:compileApiJava UP-TO-DATE
:processApiResources UP-TO-DATE
:apiClasses UP-TO-DATE
:sourceMainJava
:compileJavawarning: [options] bootstrap class path not set in conjunction with -source 1.6
D:\Users\rares\Downloads\Mods\Minecraft\RSSMod\RSBase\build\sources\java\rsstats\client\ClientProxy.java:31: error: unmappable character for encoding Cp1251
                –í–ù–?–ú–ê–ù–?–ï! –ü–æ —Ç—É—Ç–æ—Ä–∏–∞–ª—É, –º–Ω–µ –Ω–µ –Ω—É–∂–Ω–æ –¥–µ–ª–∞—Ç—å –ø—Ä–æ–≤–µ—Ä–∫—É –≤ —Å—Ç—Ä–æ–∫–µ 25.
                     ^
D:\Users\rares\Downloads\Mods\Minecraft\RSSMod\RSBase\build\sources\java\rsstats\client\ClientProxy.java:31: error: unmappable character for encoding Cp1251
                –í–ù–?–ú–ê–ù–?–ï! –ü–æ —Ç—É—Ç–æ—Ä–∏–∞–ª—É, –º–Ω–µ –Ω–µ –Ω—É–∂–Ω–æ –¥–µ–ª–∞—Ç—å –ø—Ä–æ–≤–µ—Ä–∫—É –≤ —Å—Ç—Ä–æ–∫–µ 25.
                             ^
D:\Users\rares\Downloads\Mods\Minecraft\RSSMod\RSBase\build\sources\java\rsstats\client\gui\SSPPage.java:95: error: unmappable character for encoding Cp1251
        // –≠–¢–û –?–ó –¢–£–¢–û–†–ê
                   ^
D:\Users\rares\Downloads\Mods\Minecraft\RSSMod\RSBase\build\sources\java\rsstats\common\CommonProxy.java:44: error: unmappable character for encoding Cp1251
        // –ö–û–ü–?–ü–ê–°–¢ –?–ó –¢–£–¢–û–†–ê. –•–ó –Ω–∞—Å—á–µ—Ç —Ä–∞–±–æ—Ç–æ—Å–ø–æ—Å–æ–±–Ω–æ—Å—Ç–∏
                  ^
D:\Users\rares\Downloads\Mods\Minecraft\RSSMod\RSBase\build\sources\java\rsstats\common\CommonProxy.java:44: error: unmappable character for encoding Cp1251
        // –ö–û–ü–?–ü–ê–°–¢ –?–ó –¢–£–¢–û–†–ê. –•–ó –Ω–∞—Å—á–µ—Ç —Ä–∞–±–æ—Ç–æ—Å–ø–æ—Å–æ–±–Ω–æ—Å—Ç–∏
                             ^
D:\Users\rares\Downloads\Mods\Minecraft\RSSMod\RSBase\build\sources\java\rsstats\common\RSStats.java:23: error: unmappable character for encoding Cp1251
    /** –?–º—è –º–æ–¥–∞ */
         ^
D:\Users\rares\Downloads\Mods\Minecraft\RSSMod\RSBase\build\sources\java\rsstats\data\ExtendedPlayer.java:26: error: unmappable character for encoding Cp1251
    /** –?–Ω–≤–µ–Ω—Ç–∞—Ä—å –¥–ª—è —Å—Ç–∞—Ç–æ–≤ */
         ^
D:\Users\rares\Downloads\Mods\Minecraft\RSSMod\RSBase\build\sources\java\rsstats\inventory\StatsInventory.java:53: error: unmappable character for encoding Cp1251
     * @param slotIndex –?–Ω–¥–µ–∫—Å —Å–ª–æ—Ç–∞ –≤ –∏–Ω–≤–µ–Ω—Ç–æ—Ä–µ, –∏–∑ –∫–æ—Ç–æ—Ä–æ–≥–æ –Ω—É–∂–Ω–æ –ø–æ–ª—É—á–∏—Ç—å –ø—Ä–µ–¥–º–µ—Ç
                         ^
D:\Users\rares\Downloads\Mods\Minecraft\RSSMod\RSBase\build\sources\java\rsstats\inventory\StatsInventory.java:103: error: unmappable character for encoding Cp1251
     * @return –?–º—è –∏–Ω–≤–µ–Ω—Ç–∞—Ä—è
                ^
D:\Users\rares\Downloads\Mods\Minecraft\RSSMod\RSBase\build\sources\java\rsstats\inventory\StatsInventory.java:151: error: unmappable character for encoding Cp1251
     * –?–Ω–≤–µ–Ω—Ç–∞—Ä—å –º–æ–∂–µ—Ç –∏—Å–ø–æ–ª—å–∑–æ–≤–∞—Ç—å—Å—è –∏–≥—Ä–æ–∫–æ–º?
        ^
D:\Users\rares\Downloads\Mods\Minecraft\RSSMod\RSBase\build\sources\java\rsstats\inventory\StatsInventory.java:174: error: unmappable character for encoding Cp1251
     * @return –?—Ç–æ–≥ –ø—Ä–æ–≤–µ—Ä–∫–∏: –≤–æ–∑–≤—Ä–∞—â–∞–µ—Ç true, –µ—Å–ª–∏ –ø—Ä–µ–¥–º–µ—Ç –º–æ–∂–Ω–æ –ø–æ–º–µ—Å—Ç–∏—Ç—å –≤ –∏–Ω–≤–µ–Ω—Ç–∞—Ä—å.
                ^
D:\Users\rares\Downloads\Mods\Minecraft\RSSMod\RSBase\build\sources\java\rsstats\inventory\StatsInventory.java:175: error: unmappable character for encoding Cp1251
     * –?–Ω–∞—á–µ - false.
        ^
D:\Users\rares\Downloads\Mods\Minecraft\RSSMod\RSBase\build\sources\java\rsstats\inventory\slots\StatSlot.java:30: error: unmappable character for encoding Cp1251
     * @return –?—Ç–æ–≥ –ø—Ä–æ–≤–µ—Ä–∫–∏: –≤–æ–∑–≤—Ä–∞—â–∞–µ—Ç true, –µ—Å–ª–∏ –ø—Ä–µ–¥–º–µ—Ç –º–æ–∂–Ω–æ –ø–æ–º–µ—Å—Ç–∏—Ç—å –≤ –∏–Ω–≤–µ–Ω—Ç–∞—Ä—å.
                ^
D:\Users\rares\Downloads\Mods\Minecraft\RSSMod\RSBase\build\sources\java\rsstats\inventory\slots\StatSlot.java:31: error: unmappable character for encoding Cp1251
     * –?–Ω–∞—á–µ - false.
        ^
1 warning

:processResources UP-TO-DATE
:classes
:jar
:compileTestJava UP-TO-DATE
:processTestResources UP-TO-DATE
:testClasses UP-TO-DATE
:test UP-TO-DATE
:extractMcpData UP-TO-DATE
:getVersionJson
:extractUserDev UP-TO-DATE
:genSrgs SKIPPED
:reobf
:assemble
:check UP-TO-DATE
:build

BUILD SUCCESSFUL

Total time: 27.158 secs
